manifest/testapp/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testappdep
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: container-name
        image: image-name
