manifest/testapp/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: myapp
